[package]
name = "sem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
dialoguer = { version = "0.11", features = ["fuzzy-select", "history"] }
strum = "0.25"
strum_macros = "0.25"
csv = "1.3"
rand = "0.8"
textplots = "0.8"
colored = "2.1"
comfy-table = "7"
